<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white_bg"
    tools:context="me.fmy.galaxy_a7.SonglistActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@mipmap/bg_header_songlist"
        android:id="@+id/songlist_head">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/song_activity_title"
            android:textColor="@color/colorWhite"
            android:id="@+id/textView2"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/songlist_head"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/wrap_track_a"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:background="@mipmap/bg_track"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/artist_a"
                    android:textSize="12sp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/track_a_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/song_a_title"
                    android:textSize="14sp"
                    android:id="@+id/track_a_title"
                    android:layout_below="@+id/track_a_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="01:00"
                    android:textSize="12sp"
                    android:layout_below="@+id/track_a_title"
                    android:id="@+id/track_a_duration" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <Button android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:background="@drawable/button_tosca_track"
                        android:paddingTop="0dp"
                        android:text="Select"
                        android:paddingBottom="0dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:textSize="12sp"
                        android:id="@+id/btn_select_song_1"
                        android:textColor="@color/colorWhite"
                        android:layout_centerInParent="true">

                </Button>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_track_b"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:background="@mipmap/bg_track"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/artist_b"
                    android:textSize="12sp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/track_b_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/song_b_title"
                    android:textSize="14sp"
                    android:id="@+id/track_b_title"
                    android:layout_below="@+id/track_b_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="01:00"
                    android:textSize="12sp"
                    android:layout_below="@+id/track_b_title"
                    android:id="@+id/track_b_duration" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <Button android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:background="@drawable/button_tosca_track"
                    android:paddingTop="0dp"
                    android:text="Select"
                    android:paddingBottom="0dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textSize="12sp"
                    android:id="@+id/btn_select_song_2"
                    android:textColor="@color/colorWhite"
                    android:layout_centerInParent="true">

                </Button>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_track_c"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:background="@mipmap/bg_track"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/artist_c"
                    android:textSize="12sp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/track_c_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/song_c_title"
                    android:textSize="14sp"
                    android:id="@+id/track_c_title"
                    android:layout_below="@+id/track_c_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="01:00"
                    android:textSize="12sp"
                    android:layout_below="@+id/track_c_title"
                    android:id="@+id/track_c_duration" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <Button android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:background="@drawable/button_tosca_track"
                    android:paddingTop="0dp"
                    android:text="Select"
                    android:paddingBottom="0dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textSize="12sp"
                    android:id="@+id/btn_select_song_3"
                    android:textColor="@color/colorWhite"
                    android:layout_centerInParent="true">

                </Button>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_track_d"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:background="@mipmap/bg_track"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/artist_d"
                    android:textSize="12sp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/track_d_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/song_d_title"
                    android:textSize="14sp"
                    android:id="@+id/track_d_title"
                    android:layout_below="@+id/track_d_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="01:00"
                    android:textSize="12sp"
                    android:layout_below="@+id/track_d_title"
                    android:id="@+id/track_d_duration" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <Button android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:background="@drawable/button_tosca_track"
                    android:paddingTop="0dp"
                    android:text="Select"
                    android:paddingBottom="0dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textSize="12sp"
                    android:id="@+id/btn_select_song_4"
                    android:textColor="@color/colorWhite"
                    android:layout_centerInParent="true">

                </Button>

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrap_track_e"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginBottom="12dp"
            android:background="@mipmap/bg_track"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="match_parent"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/artist_e"
                    android:textSize="12sp"
                    android:layout_alignParentTop="true"
                    android:id="@+id/track_e_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/song_e_title"
                    android:textSize="14sp"
                    android:id="@+id/track_e_title"
                    android:layout_below="@+id/track_e_genre" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="01:00"
                    android:textSize="12sp"
                    android:layout_below="@+id/track_e_title"
                    android:id="@+id/track_e_duration" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent">
                <Button android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:background="@drawable/button_tosca_track"
                    android:paddingTop="0dp"
                    android:text="Select"
                    android:paddingBottom="0dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:textSize="12sp"
                    android:id="@+id/btn_select_song_5"
                    android:textColor="@color/colorWhite"
                    android:layout_centerInParent="true">

                </Button>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>







    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/general_outter_padbtm"
        android:layout_marginTop="@dimen/general_outter_margin"
        android:layout_marginBottom="@dimen/general_outter_margin"
        android:paddingLeft="@dimen/general_outter_padleft"
        android:visibility="gone"
        android:paddingRight="@dimen/general_outter_padright">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/song_activity_title"
            android:id="@+id/textView"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/generalFontSizeH3"
            android:layout_centerInParent="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_a_title"
            android:id="@+id/btn_song_a"
            style="@style/SongsButton"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_b_title"
            android:id="@+id/btn_song_b"
            style="@style/SongsButton"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_c_title"
            android:id="@+id/btn_song_c"
            style="@style/SongsButton"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_d_title"
            android:id="@+id/btn_song_d"
            style="@style/SongsButton"
            android:layout_gravity="center_horizontal" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song_e_title"
            android:id="@+id/btn_song_e"
            style="@style/SongsButton"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>
