<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/bg_register"
    tools:context="me.fmy.galaxy_a7.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/general_outter_padbtm"
        android:paddingTop="108dp"
        android:layout_marginTop="@dimen/general_outter_margin"
        android:layout_marginBottom="20dp"
        android:paddingLeft="@dimen/general_outter_padleft"
        android:paddingRight="@dimen/general_outter_padright"
        android:layout_marginLeft="-4dp">

        <EditText
            style="@style/RegisterEditText"
            android:hint="@string/register_hint_name"
            android:layout_marginTop="@dimen/general_outter_margin_top"
            android:drawableLeft="@mipmap/ic_reg_name"
            android:id="@+id/etxt_name" />
        <EditText
            style="@style/RegisterEditText"
            android:hint="@string/register_hint_email"
            android:drawableLeft="@mipmap/ic_reg_email"
            android:id="@+id/etxt_email" />
        <EditText
            style="@style/RegisterEditText"
            android:hint="Instagram Account"
            android:drawableLeft="@mipmap/ic_reg_ig"
            android:id="@+id/etxt_instagram" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="60dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorEditTextLight"
                android:text="I agree to the"
                android:id="@+id/checkBox"
                android:paddingRight="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Terms of Services"
                android:id="@+id/txt_link_tnc"
                android:textColor="@color/colorWhite"
                android:paddingLeft="0dp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@+id/checkBox"
                android:layout_toEndOf="@+id/checkBox"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="-6dp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/general_outter_padleft"
        android:paddingRight="@dimen/general_outter_padright"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_tosca_rounded"
            android:layout_marginTop="@dimen/general_outter_margin_top"
            android:textColor="@color/colorEditTextLight"
            android:text="@string/register_button_text"
            android:id="@+id/btn_register" />

    </RelativeLayout>
</RelativeLayout>
